# canvaz

./: .gitignore  LICENSE  README.md  canvaz.csv  example.dbc  index.html  kvaser_test.c  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  release.yml
src/: main.ts  styles.css
src-tauri/: Cargo.toml  build.rs  sample.dbc  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/old/: icon.icns
src-tauri/src/: app_state.rs  can_frame.rs  can_interface.rs  can_manager.rs  dbc_parser.rs  j1939.rs  lib.rs  logger.rs  main.rs  project.rs  signal_codec.rs  sim_generator.rs
src-tauri/src/backends/: kvaser.rs  mod.rs  socketcan.rs
src-tauri/src/backends2/: mod.rs  socketcan.rs
src-tauri/src/can_communication/: example_backend.rs  kvaser.rs  mod.rs  pcan.rs  socketcan.rs
