[package]
name = "can_signals"
version = "0.1.0"
description = "CAN Bus Signal Viewer and Simulator"
authors = ["Christoffer Zakrisson"]
edition = "2021"

[lib]
name = "can_signals_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
can-dbc = "9"
socketcan = { version = "3", optional = true }
can-hal = { version = "0.4.1", package = "can-hal-rs", optional = true }
can-hal-kvaser = { version = "0.4.1", optional = true }
libloading = { version = "0.8", optional = true }
thiserror = "1"
log = "0.4"

[features]
default = ["linux-can", "kvaser"]
linux-can = ["socketcan"]
kvaser = ["can-hal", "can-hal-kvaser", "libloading"]

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
